updated app meta-title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v2",
+  "name": "open-movie-search",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "Nicholas Bright <nikkistorme@gmail.com>",
